--- a/index.html
+++ b/index.html
@@ -105,12 +105,8 @@
                 <div class="token-card distribution">
                     <h3><i class="fas fa-chart-pie"></i> Распределение токенов</h3>
                     <div class="distribution-item">
-                        <span>Продажа</span>
-                        <span>30%</span>
-                    </div>
-                    <div class="distribution-item">
-                        <span>Ликвидность</span>
-                        <span>25%</span>
+                        <span>Airdrop</span>
+                        <span>40%</span>
                     </div>
                     <div class="distribution-item">
                         <span>Команда</span>
@@ -122,6 +118,10 @@
                     </div>
                     <div class="distribution-item">
                         <span>Резерв</span>
+                        <span>15%</span>
+                    </div>
+                    <div class="distribution-item">
+                        <span>Экосистема</span>
                         <span>10%</span>
                     </div>
                 </div>
